--- a/mystyle.css
+++ b/mystyle.css
@@ -1,13 +1,17 @@
 body {
   background-color: white;
   margin: 0;
+  background-image: url("Background.jpeg");
 }
 
 h1,h2 {
-  color: indigo;
+  color: white;
   text-align: center;
   font-size: 45px;
   font-family: georgia;
+  background-color: transparent;
+  margin-right: 190px;
+  margin-left: 190px;
 }
 
 h3 {
@@ -16,14 +20,19 @@ h3 {
   font-family: serif;
   font-style: italic;
   font-size: 15px;
+  background-color: white;
+  margin-right: 190px;
+  margin-left: 190px;
 }
 p {
-color: black;
- 	margin: 25px 50px 75px;
+color: indigo;
   font-family: serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: normal;
   font-size: 15px;	
+  background-color: white;
+  margin-right: 190px;
+  margin-left: 190px;
 
 }
 *{
@@ -32,7 +41,7 @@ color: black;
 .topnav {
 	width: 100%;
 	margin: 0 auto;
-  background-color: indigo;
+  background-color: transparent;
   overflow: hidden;
   text-decoration: none;
   list-style: none;
