--- a/mystyle.css
+++ b/mystyle.css
@@ -1,10 +1,16 @@
 body {
   background-color: white;
-  margin: 0;
   background-image: url("Background.jpeg");
 }
 
-h1,h2 {
+h1 {
+	 text-align: center;
+ color: white;
+  font-size: 45px;
+  font-family: georgia;
+}
+
+h2 {
   color: white;
   text-align: center;
   font-size: 45px;
@@ -15,15 +21,11 @@ h1,h2 {
 }
 
 h3 {
-	color: white;
-	text-align: center;
+	 text-align: center;
+	 color: white;
   font-family: serif;
   font-style: italic;
-  position: center;
   font-size: 15px;
-  background-color: transparent;
-  margin-right: 190px;
-  margin-left: 190px;
 }
 p {
 color: indigo;
@@ -65,3 +67,15 @@ color: indigo;
 	margin: auto;
 	width: 50%;
 }
+.index {
+	width: 40%;
+	background-color: transparent;
+	padding: 30px;
+	margin: auto;
+	position: relative;
+ 	top: 70%;
+	-webkit-transform: translateY(100%);
+	-ms-transform: translateY(100%);
+	transform: translateY(100%);
+	}
+.
