--- a/mystyle.css
+++ b/mystyle.css
@@ -55,7 +55,6 @@ color: indigo;
   text-decoration: none;
   list-style: none;
   font-size: 17px;
-
 }
  .topnav a:hover {
   background-color: indigo;
@@ -73,9 +72,42 @@ color: indigo;
 	padding: 30px;
 	margin: auto;
 	position: relative;
- 	top: 70%;
+ 	top: 60%;
 	-webkit-transform: translateY(100%);
 	-ms-transform: translateY(100%);
 	transform: translateY(100%);
 	}
-.
+
+.a-m a {
+	background-color: transparent;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 14px 16px;
+  font-family: serif;
+  list-style: none;
+  font-size: 17px;
+  color: white;
+}
+
+.a-m {
+	background-color: transparent;
+  text-align: center;
+  text-decoration: none;
+  border: 2px solid;
+  border-color: white;
+  padding: 12px 14px;
+  
+}
+.a-m:hover {
+	background-color: indigo;
+	}
+.i-b{
+	width: 30%;
+	padding-top: 180px;
+	padding-bottom: 40px;
+	padding-left: 165px;
+	padding-right: 45px;
+	margin: auto;
+	position: relative;
+}
