--- a/mystyle.css
+++ b/mystyle.css
@@ -1,6 +1,9 @@
 body {
   background-color: white;
   background-image: url("Background.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 h1 {
