--- a/mystyle.css
+++ b/mystyle.css
@@ -124,3 +124,47 @@ color: indigo;
 	margin: auto;
 	position: relative;
 }
+.asb a {
+	background-color: transparent;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 14px 16px;
+  font-family: serif;
+  list-style: none;
+  font-size: 45px;
+  color: white;
+}
+.asb {
+	background-color: transparent;
+  text-align: center;
+  text-decoration: none;
+  border: 2px solid;
+  border-color: white;
+  padding: 20px 20px;
+  
+}
+.asb:hover {
+	background-color: indigo;
+	}
+.assi {
+	width: 30%;
+	padding-top: 130px;
+	padding-bottom: 40px;
+	padding-left: 95px;
+	padding-right: 15px;
+	margin: auto;
+	position: relative;
+	height: 20px;
+	margin: 0px;
+}
+.assi2 {
+	width: 30%;
+	padding-top: 100px;
+	padding-bottom: 20px;
+	padding-left: 195px;
+	padding-right: 0px;
+	margin-left: : 500px;
+	position: relative;
+	height: 20px;
+}
