--- a/mystyle.css
+++ b/mystyle.css
@@ -68,6 +68,8 @@ color: indigo;
 	padding: 20px;
 	margin: auto;
 	width: 50%;
+	font-family: serif;
+	line-height: 120%;
 }
 .index {
 	width: 40%;
