--- a/mystyle.css
+++ b/mystyle.css
@@ -36,13 +36,14 @@ color: indigo;
   font-style: normal;
   font-weight: normal;
   font-size: 15px;	
+  text-decoration: none;
 }
 *{
 	list-style: none;
 }
 .topnav {
 	width: 100%;
-	margin: 0 auto;
+	margin: 15px;
   background-color: transparent;
   overflow: hidden;
   text-decoration: none;
@@ -59,9 +60,83 @@ color: indigo;
   list-style: none;
   font-size: 17px;
 }
- .topnav a:hover {
+ .topnav a:hover, .dropdown:hover .dropbtn{
   background-color: indigo;
 
+}
+.active {
+  background-color: transparent;
+  color: white;
+}
+.topnav .icon {
+  display: none;
+}
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: serif;
+  font-weight: bold;
+  margin: 0;
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: lavender;
+  min-width: 124px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+.dropdown-content a:hover {
+  background-color: #9370DB;
+  color: black;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
 }
 .paragraph {
 	background-color: white;
@@ -70,6 +145,10 @@ color: indigo;
 	width: 50%;
 	font-family: serif;
 	line-height: 120%;
+}
+.paragraph a{
+	text-decoration: none;
+	color: indigo;
 }
 .index {
 	width: 40%;
